old_tests/success/syntax/caseof/main.sk
module Main where

import Std.Util

data Color = Red Int Int | Blue | Green Int Int

main = do
    case Blue of
        Red a b | Green a b -> assert False
        _ -> assert True