old_tests/fail/non_exhaustive_pattern_adt_variant/main.sk
module Main where

data Color = Red Int Int | Blue | Green Int Int

main = do
    case Blue of
        Red a b | Green a b -> ()
